# newbe

./: .gitignore  LICENSE  PROGRESS.md  README.md  README_CN.md  README_EN.md  _batch_gen.py  reviewed.txt  unreviewed.txt  upgrade_readmes.py
academic-group-meeting-pipeline/: README.md
academic-writing/: README.md  README_EN.md
adapter-trimmer-wrapper/: README.md  adapter_trimmer_wrapper.py
alignment-bam/: README.md  README_EN.md
alternative-splicing-detector/: README.md  alternative_splicing_detector.R
arxiv-paper-downloader/: arxiv_paper_downloader.py  requirements.txt
atac-peak-annotator/: README.md  atac_peak_annotator.py
bam-coverage-plotter/: README.md  bam-coverage-plotter.py
bam-filter-by-flag/: README.md
bam-insert-size-calculator/: bam-insert-size-calculator.py
bam-mate-pair-resolver/: README.md  bam-mate-pair-resolver.py
bam-readcount-summarizer/: README.md  bam_readcount_summarizer.py  requirements.txt
bam-stats-reporter/: README.md  bam_stats_reporter.py
base-quality-plotter/: README.md  base_quality_plotter.py
batch-effect-inspector/: README.md  batch_effect_inspector.py
bed-coverage-interpolator/: bed_coverage_interpolator.py
bed-fasta-extractor/: README.md
bed-intersect-counter/: bed-intersect-counter.py
bed-merge-annotate/: README.md  bed_merge_annotate.py
benchmark-result-comparator/: README.md
bibliography-graph-builder/: README.md
lab-project/md2ipynb-sync/: .gitignore  README.md  pyproject.toml  requirements.txt
lab-project/md2ipynb-sync/md2ipynb_sync/: __init__.py  engine.py  gui.py  main.py
(+1014 files in other folders)
